<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PasswordGeneratorFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/generatedPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/baseline_content_copy_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/password_length_7"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:textSize="24sp"/>

    <SeekBar
        android:id="@+id/lengthBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="43"
        android:progress="0"
        android:progressDrawable="@drawable/custom_seekbar"
        android:layout_gravity="top"
        android:layout_marginTop="160dp"
        android:progressTint="#2196F3"
        android:thumb="@drawable/thumb" />

    <CheckBox
        android:id="@+id/uppercaseCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:text="@string/uppercase_alphabets"
        android:textSize="20sp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/lowercaseCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/lowercase_alphabets"
        android:textSize="20sp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/symbolsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:text="@string/symbols"
        android:textSize="20sp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/numbersCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="420dp"
        android:text="@string/numbers"
        android:textSize="20sp"
        android:checked="true"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:text="@string/generate"/>

</FrameLayout>